@@ -10,7 +10,7 @@
 <classPath>..\lib\JimiProClasses.zip</classPath>
 <classPath>..\lib\dtdparser113.jar</classPath>
 <executableName>..\JSmoothGen.exe</executableName>
-<iconLocation>..\src\icons\gnome-application-x-jar.png</iconLocation>
+<iconLocation>..\src\icons\gnome-application-x-jar-bm.gif</iconLocation>
 <initialMemoryHeap>-1</initialMemoryHeap>
 <jarLocation>..\jsmoothgen.jar</jarLocation>
 <mainClassName>net.charabia.jsmoothgen.application.gui.MainFrame</mainClassName>
